--- a/index.html
+++ b/index.html
@@ -10,24 +10,24 @@
 <body>
     <h1>Projeto calculadora</h1>
     <section class="container">
-        <div id="res">Resultado</div>
-        <div class="hover" id="ca">CA</div>
-        <div id="raiz"><img src="https://cdn-icons.flaticon.com/png/512/649/premium/649694.png?token=exp=1655345956~hmac=fcaf32d41fa390c4d20530363c06f150" alt=""></div>
+        <div id="res"></div>
+        <div class="hover" id="ca" onclick="ca()">CA</div>
+        <div class="hover" id="raiz">Raiz</div>
         <div class="hover" id="por">%</div>
         <div class="hover" id="div">/</div>
-        <div class="hover" id="sete">7</div>
-        <div class="hover" id="oito">8</div>
-        <div class="hover" id="nove">9</div>
+        <div class="hover" id="sete" onclick="sete()">7</div>
+        <div class="hover" id="oito" onclick="oito()">8</div>
+        <div class="hover" id="nove" onclick="nove()">9</div>
         <div class="hover" id="mult">*</div>
-        <div class="hover" id="quatro">4</div>
-        <div class="hover" id="cinco">5</div>
-        <div class="hover" id="seis">6</div>
+        <div class="hover" id="quatro" onclick="quatro()">4</div>
+        <div class="hover" id="cinco" onclick="cinco()">5</div>
+        <div class="hover" id="seis" onclick="seis()">6</div>
         <div class="hover" id="menos">-</div>
-        <div class="hover" id="um">1</div>
-        <div class="hover" id="dois">2</div>
-        <div class="hover" id="tres">3</div>
+        <div class="hover" id="um" onclick="um()">1</div>
+        <div class="hover" id="dois" onclick="dois()">2</div>
+        <div class="hover" id="tres" onclick="tres()">3</div>
         <div class="hover" id="mais" onclick="somar()">+</div>
-        <div class="hover" id="zero">0</div>
+        <div class="hover" id="zero" onclick="zero()">0</div>
         <div class="hover" id="ponto">.</div>
         <div class="hover" id="igual">=</div>
     </section>
