--- a/index.html
+++ b/index.html
@@ -10,26 +10,22 @@
 <body>
     <h1>Projeto calculadora</h1>
     <section class="container">
-        <div id="res"></div>
-        <div class="hover" id="ca" onclick="ca()">CA</div>
-        <div class="hover" id="raiz">Raiz</div>
-        <div class="hover" id="por">%</div>
-        <div class="hover" id="div">/</div>
-        <div class="hover" id="sete" onclick="sete()">7</div>
-        <div class="hover" id="oito" onclick="oito()">8</div>
-        <div class="hover" id="nove" onclick="nove()">9</div>
-        <div class="hover" id="mult">*</div>
-        <div class="hover" id="quatro" onclick="quatro()">4</div>
-        <div class="hover" id="cinco" onclick="cinco()">5</div>
-        <div class="hover" id="seis" onclick="seis()">6</div>
-        <div class="hover" id="menos">-</div>
-        <div class="hover" id="um" onclick="um()">1</div>
-        <div class="hover" id="dois" onclick="dois()">2</div>
-        <div class="hover" id="tres" onclick="tres()">3</div>
-        <div class="hover" id="mais" onclick="somar()">+</div>
-        <div class="hover" id="zero" onclick="zero()">0</div>
-        <div class="hover" id="ponto">.</div>
-        <div class="hover" id="igual">=</div>
+        <input class="btn btn-divisao" type="button" value="/">
+        <input class="btn btn-multi" type="button" value="*">
+        <input class="btn btn-sub" type="button" value="-">
+        <input class="btn btn-adi" type="button" value="+">
+        <input class="btn btn7" type="button" value="7">
+        <input class="btn btn8" type="button" value="8">
+        <input class="btn btn9" type="button" value="9">
+        <input class="btn btn4" type="button" value="4">
+        <input class="btn btn5" type="button" value="5">
+        <input class="btn btn6" type="button" value="6">
+        <input class="btn btn1" type="button" value="1">
+        <input class="btn btn2" type="button" value="2">
+        <input class="btn btn3" type="button" value="3">
+        <input class="btn btn0" type="button" value="0">
+        <input class="btn btn-ponto" type="button" value=".">
+        <input class="btn btn-enter" type="button" value="Enter">
     </section>
     <script src="script.js"></script>
 </body>
